# pdf_translation

./: .gitignore  pyproject.toml
src/: inpainting.py  layout_detection.py  main.py  pipeline.py  redact.py  redact_text.py  text_extraction.py  translator.py
src/configs/: .env.example  config.dev.yml
src/utils/: config_utils.py  img2pdf.py  log_utils.py  pdf2img.py
