[project]
name = "pdf-translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "doclayout-yolo>=0.0.3",
    "easyocr>=1.7.2",
    "huggingface-hub>=0.30.2",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "simple-lama-inpainting>=0.1.2",
]
