[project]
name = "pdf-translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "doclayout-yolo>=0.0.3",
    "easyocr>=1.7.2",
    "fpdf2>=2.8.3",
    "huggingface-hub>=0.30.2",
    "openai>=1.76.0",
    "pdf2image>=1.17.0",
    "pymupdf>=1.25.5",
    "pypdf>=5.4.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "reportlab>=4.4.0",
    "simple-lama-inpainting>=0.1.2",
    "spire-pdf>=10.12.1",
]
